Updated grammar in config.yml

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,7 +8,7 @@ language:
   message-format: "&b%material% &7is in the following categories: &6%categories%"
   # message-format: If the item you're holding is not in a category
   no-category: "&b%material &7is not in any categories"
-  # no-item: Reply for if you're not holding an item
+  # no-item: If you're not holding an item
   no-item: "&cYou are not holding an item"
   # reload: Sent when the plugin is successfully reloaded
   reload: "&aItemCategories has been reloaded"
